--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#projects">PROJECTS</a>
         <a href="#contact">CONTACT</a>
     </nav>
-    <div>
+    <div class="search">
         <input type="text" placeholder="Type to Search">
         <button>Search</button>
     </div>
